2010-01-14  Diego Gonzalez  <diego.gonzalez@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT missing setUserStyleSheetLocation and setUserStyleSheetEnabled in LayoutTestController
        https://bugs.webkit.org/show_bug.cgi?id=33617

        * platform/qt/Skipped:
2010-01-14  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT missing setUserStyleSheetLocation and setUserStyleSheetEnabled in LayoutTestController
        https://bugs.webkit.org/show_bug.cgi?id=33617

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setUserStyleSheetLocation):
        (LayoutTestController::setUserStyleSheetEnabled):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/44657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53249 268f45cc-cd09-0410-ab3c-d52691b4dbfc